fixat lite med letter-spacing

--- a/src/css/_base.scss
+++ b/src/css/_base.scss
@@ -30,8 +30,8 @@ main {
 p,
 ul {
     line-height: 1.8;
-    letter-spacing: 0.5;
-    font-size: 0.8em;
+    letter-spacing: 0.6;
+    font-size: 0.9em;
 }
 
 h2 {
@@ -196,7 +196,7 @@ h5 {
     }
 
     input {
-        width: 40%;
+        width: 50%;
         height: 2em;
         padding: 0 0.5em;
         border-radius: 5px;
