--- a/src/css/_cards.scss
+++ b/src/css/_cards.scss
@@ -60,7 +60,7 @@
 
     img {
         max-width: 5em;
-        margin: 0 2em;
+        margin: 0 3em;
         filter: grayscale(100%);
         opacity: 30%;
         transition: 1.5s ease;
